update to documentation of account creation user stories

--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -28,7 +28,7 @@
 
 | **_Name_**         | **_Business Rules_**                                                                   |
 | :-------------------------- | :------------------------------------------------------------------------------------- |
-| **Description**                | Required, string            |
+| **Designation**                | Required, string            |
 | **InitialAmount**                    | Optional, Integer, default is 0
 |**Currency**  | Optional, must be given in ISO 4217 currency code, if absent euro (EURO) is default |
 | **OwnerID**               | Required, alphanumeric                                                        |
@@ -43,109 +43,94 @@
 
 All accounts will be created using a single entry DTO. This DTO will have an attribute that specifies the type of account to be created. This way, we have a single entry point for all methods regarding account creation. 
 
-At another point, with more information and user stories regarding accounts, some changes could be made. Another request can come from the client with additional information, for example.
+- At another point, with more information and user stories regarding accounts, some changes could be made. Another request can come from the client with additional information, for example.
 
-In our service, a DTO to Domain assembler will be used to process received data and create the desired account type. The assembler will instantiate the necessary value objects. The balance of an account will be calculated through its list of movements, so a balance attribute will not be necessary on first time creation, but will be obtained from an initial movement. When retrieving the account from persistence, the balance can be directly obtained.
+In our service, a DTO to Domain assembler will be used to process received data and create the necessary value objects. 
 
-Balance should be updated with every movement made on the account.
+At this moment all of our accounts share the same attributes except for the owner, who in the case of a CashAccount can be a person or a family. As such, we'll use an Account interface that will hold behaviour common to all accounts and an abstract class Account that will hold attributes such as designation, balance, accountID and list of movements. CashAccount and NonCashAccount abstract classes will extend this Account abstract class and have the ownerID/personID attribute. Finally we have our specific account classes, CashAccount, BankAccount, BankSavingsAccount and CreditCardAccount.
+
+The balance of an account will be calculated through its list of movements, so a balance attribute will not be necessary on account instantiation but can be calculated by a private method in the account class or an interface BalanceCalculator that will have different implementations depending on how balance is to be calculated.
 
 ```
-// AccountData Attributes
-OwnerID ownerID;
-Description description;
-Monetary balance;
-AccountID accountID;
-List<Movement> movements = new ArrayList();
-
-// @AllArgsConstructor + optional movement that will create the balance
-   public AccountData(OwnerID ownerID, Description description, Monetary balance, AccountID accountID, List<Movement> movements, Movement movement) {
+// Balance is calculated outside of constructor
+   public CashAccount(OwnerID ownerID, Designation designation, AccountID accountID, List<Movement> movements) {
+      this.balance = calculateBalance(movements) OR this.balance = balanceCalculator.calculate(movements);
       ...
-      if (balance != null) this.balance = balance;
-      else if (movement != null) this.balance = movement.getMonetary();
-      else this.balance = new Monetary();
-      ...
+   }
+   
+   // Example: private method in account
+   private Monetary calculateBalance(List<Movement> movements) {
+      Monetary balance = new Monetary()
+      // for every movement in movements, balance.sum(movement)
+      return balance 
    }
 ```
 
-This assembler will use the AccountFactory class, that will abstract the logic behind account creation. 
+To create an account the service will use the AccountFactory class, that will abstract the logic behind account creation.
 
 ```
-Account account = accountFactory.getAccount(ownerID, initialMovement, description, accountType)
+Account account = accountFactory.getAccount(ownerID, initialMovement, designation, accountType)
 ```
 
-Account type is a string in the DTO that will be used to create an AccountType object. [This is an Enum class that will be instantiated using a valueOf() method:](https://www.baeldung.com/java-string-to-enum
+**AccountType**
+
+Account type is a string in the incoming DTO. Through configuration files black magic, the factory will recognize the received String and create the appropriate account. In API documentation, the allowed Strings must be specified.
+
+In the AccountFactory class, the constructor will decide which account class to create depending on the AccountType object it receives.
 )
 
-```
-AccountType accountType = AccountType.valueOf(String <desired account type>);
-```
-
-Account types must be hard-coded. As of this moment, we have Cash Accounts, Bank Accounts, Bank Savings Accounts and Credit Card Accounts. In API documentation, this parameter must be specified according to this class.
-
-In the AccountFactory class, the constructor will decide which account class to create depending on the AccountType object it receives. [Example:](https://www.tutorialspoint.com/design_pattern/factory_pattern.htm
-)
-
-```
-Account account;
-
-// if AccountType = "CASH_ACCOUNT", then
-
-Account account = new CashAccount.Builder(ownerID, initialMovement, description).build();
-
-...
-```
+**AccountID**
 
 AccountID generation will be handled by the database. Upon account first time creation, no ID will be used. When saved in the repository, a savedAccount object will be returned that has a generated AccountID value. Subsequent account creation will use this AccountID. This AccountID can also be used in the ResponseEntity of the request as a self link.
 
-To handle this, AccountFactory will have methods with the same name but different signature, one with only the required data, one with an initial movement and one with all arguments for accounts retrieved from persistence.
+To handle this, AccountFactory will have methods with the same name but different signatures, depending on the arguments it can receive.
 
-The classes that implement the Account interface will have a builder inner class to instantiate objects. The required data for an Account object are OwnerID, Balance and Description. The builder will allow a withAccountID() method to be used as well:
+Specific account classes will have a builder inner class to instantiate objects. The required data for an Account object are OwnerID and Designation. The builder will allow a withAccountID(), withMovement() and withMovements() methods to be used as well:
 
 ```
-// first time account creation with exterior data and no balance
-Account account = new CashAccount.Builder(ownerID, description).build();
+// first time account creation with unspecified balance
+Account account = new CashAccount.Builder(ownerID, designation).build();
 
-// first time account creation with exterior data
-Account account = new CashAccount.Builder(ownerID, description).withMovement(movement).build();
+// first time account creation with initial movement
+Account account = new CashAccount.Builder(ownerID, designation).withMovement(movement).build();
 
 // account data from persistence
-Account account = new CashAccount.Builder(ownerID, , description).withBalance(balance).withMovements(movements).withAccountID(accountID).build();
+Account account = new CashAccount.Builder(ownerID, , designation).withMovements(movements).withAccountID(accountID).build();
 ```
 
-Each class that implements Account should have a builder of its own. This will result in some repeated code, where the only change is the return of the build() method.
+**Builder**
+
+Each specific Account class should have a builder of its own. This will result in some repeated code, where the only change is the return of the build() method.
 
 ```
 public class CashAccount {
 
-   private AccountData data;
-   
-   private CashAccount(AccountData data)  {
-      this.data = data;
+   private CashAccount(this.ownerID, this.designation, this.accountID, this.movements) {
+   ...
    }
-
+   
    public static class Builder {
    
       private OwnerID ownerID
-      private Description description
+      private Designation designation
       private AccountID accountID
       private List<Movement> movements
       
-      // Indespensavel para criar uma conta válida
-      public Builder(OwnerID ownerID, Description description) {
+      // Indispensável para criar uma conta válida
+      public Builder(OwnerID ownerID, Designation designation) {
       
       }
       
       public Builder withAccountID(AccountID accountID) {}
-      
+
       public Builder withMovement(Movement movement) {
          this.movements.add(movement)   
       }
-      
+
       public Builder withMovementList(List<Movement> movements) {}
       
       public Account build() {
-         AccountData accountData = new AccountData(this.ownerID, this.description, this.accountID, this.movements);
-         return new CashAccount(accountData);   
+         return new CashAccount(this.ownerID, this.designation, this.accountID, this.movements);
       }
    }
 }
@@ -153,13 +138,18 @@ public class CashAccount {
 
 Another option could be used (mais elegante, mas talvez desnecessário) to avoid this duplication, a [skeletal interface](https://dzone.com/articles/favour-skeletal-interface-in-java).
 
-- In this version, the inner class would extend an abstract class that implements account. This abstract class would contain necessary code except for the build() method, different for every class. With this we could also avoid using an AccountData class.
+- In this version, the inner class would extend an abstract class that implements account. This abstract class would contain necessary code except for the build() method, different for every class.
 
 **Monetary**
 
 Regarding handling money in our application, a class that has as attributes monetary value and associated currency is necessary. For currency, we can use the java util class [Currency](https://www.geeksforgeeks.org/java-util-currency-methods-example/). This class allows an instance of currency to be created using a [ISO 4217 currency code](https://en.wikipedia.org/wiki/ISO_4217). The monetary value could be a BigDecimal (recommended) or other options that allow floats.
 
-The request for the creation of an account may have an initialAmount included. In the application, this amount will be converted into a movement.git 
+The request for the creation of an account may have an initialAmount included. In the application, this amount will be converted into a movement. If no amount is specified, the account will be created with a balance of 0.
+
+**Sketch Diagram**
+
+
+![diagram](../../../assets/accounts01.jpeg)
 
 ## 3.2. Class Diagram
 
@@ -241,7 +231,7 @@ title InputAccountDTO to Account
 participant ": AccountDTODomainAssembler" as assembler
 participant ": OwnerID" as owner
 participant ": Balance" as balance
-participant ": Description" as description
+participant ": Designation" as designation
 participant ": AccountType" as type
 
 -> assembler : toDomain(inputAccountDTO)
@@ -251,7 +241,7 @@ assembler -> owner ** : create(inputAccountDTO.unpackOwnerID())
 
 assembler -> balance ** : create(inputAccountDTO.unpackBalance())
 
-assembler -> description ** : create(inputAccountDTO.unpackDescription())
+assembler -> designation ** : create(inputAccountDTO.unpackDesignation())
 
 assembler -> type : valueOf(inputAccountDTO.unpackAccountType())
 activate type
@@ -260,7 +250,7 @@ return accountType
 ref over assembler
 Account Factory 1.
 
-account = accountFactory.getAccout(ownerID, balance, description, accountType)
+account = accountFactory.getAccout(ownerID, balance, designation, accountType)
 end
 
 return account
@@ -277,20 +267,20 @@ participant "bankAccount : Account" as bankAccount
 participant "bankSavingsAccount : Account" as bankSavingsAccount
 participant "creditCardAccount : Account" as creditCardAccount
 
--> factory : getAccount(ownerID, balance, description, accountType)
+-> factory : getAccount(ownerID, balance, designation, accountType)
 activate factory
 
 alt if(accountType = "CASH_ACCOUNT")
-factory -> cashAccount ** : create(ownerID, balance, description)
+factory -> cashAccount ** : create(ownerID, balance, designation)
 
 else if(accountType = "BANK_ACCOUNT")
-factory -> bankAccount ** : create(ownerID, balance, description)
+factory -> bankAccount ** : create(ownerID, balance, designation)
 
 else if(accountType = "BANK_SAVINGS_ACCOUNT")
-factory -> bankSavingsAccount ** : create(ownerID, balance, description)
+factory -> bankSavingsAccount ** : create(ownerID, balance, designation)
 
 else if(accountType = "CREDIT_CARD_ACCOUNT")
-factory -> creditCardAccount ** : create(ownerID, balance, description)
+factory -> creditCardAccount ** : create(ownerID, balance, designation)
 
 end
 
@@ -308,7 +298,7 @@ participant ": AccountDataDomainAssembler" as assembler
 participant "accountID : AccountID" as id
 participant "ownerID : OwnerID" as owner
 participant "balance : Balance" as balance
-participant "description : Description" as description
+participant "designation : Designation" as designation
 participant "accountType: AccountType" as type
 
 -> assembler : toDomain(accountJPA)
@@ -320,7 +310,7 @@ assembler -> owner ** : create(accountJPA.getOwner())
 
 assembler -> balance ** : create(accountJPA.getBalance())
 
-assembler -> description ** : create(accountJPA.getDescription)
+assembler -> designation ** : create(accountJPA.getDesignation)
 
 assembler -> type : valueOf(accountJPA.accountType)
 activate type
@@ -329,7 +319,7 @@ return accountType
 ref over assembler
 Account Factory 2.
 
-account = accountFactory.getAccout(ownerID, balance, description, accountType, accountID)
+account = accountFactory.getAccout(ownerID, balance, designation, accountType, accountID)
 end
 
 return account
@@ -346,20 +336,20 @@ participant "bankAccount : Account" as bankAccount
 participant "bankSavingsAccount : Account" as bankSavingsAccount
 participant "creditCardAccount : Account" as creditCardAccount
 
--> factory : getAccount(ownerID, balance, description, accountType, accountID)
+-> factory : getAccount(ownerID, balance, designation, accountType, accountID)
 activate factory
 
 alt if(accountType = "CASH_ACCOUNT")
-factory -> cashAccount ** : create(ownerID, balance, description, accountID)
+factory -> cashAccount ** : create(ownerID, balance, designation, accountID)
 
 else if(accountType = "BANK_ACCOUNT")
-factory -> bankAccount ** : create(ownerID, balance, description, accountID)
+factory -> bankAccount ** : create(ownerID, balance, designation, accountID)
 
 else if(accountType = "BANK_SAVINGS_ACCOUNT")
-factory -> bankSavingsAccount ** : create(ownerID, balance, description, accountID)
+factory -> bankSavingsAccount ** : create(ownerID, balance, designation, accountID)
 
 else if(accountType = "CREDIT_CARD_ACCOUNT")
-factory -> creditCardAccount ** : create(ownerID, balance, description, accountID)
+factory -> creditCardAccount ** : create(ownerID, balance, designation, accountID)
 
 end
 
