--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -77,7 +77,6 @@ Account account = accountFactory.getAccount(ownerID, initialMovement, designatio
 Account type is a string in the incoming DTO. Through configuration files black magic, the factory will recognize the received String and create the appropriate account. In API documentation, the allowed Strings must be specified.
 
 In the AccountFactory class, the constructor will decide which account class to create depending on the AccountType object it receives.
-)
 
 **AccountID**
 
@@ -105,10 +104,12 @@ Each specific Account class should have a builder of its own. This will result i
 ```
 public class CashAccount {
 
+   // private constructor
    private CashAccount(this.ownerID, this.designation, this.accountID, this.movements) {
    ...
    }
    
+   // builder inner class
    public static class Builder {
    
       private OwnerID ownerID
@@ -182,10 +183,19 @@ controller -> service : createAccount(inputAccountDTO)
 activate service
 
 ref over service
-InputAccountDTO to Account
+InputAccountDTO to Value Objects
 
-account = accountDTODomainAssembler.toDomain(inputAccountDTO)
+designation = accountDTODomainAssembler.designationToDomain(inputAccountDTO)
+ownerID = accountDTODomainAssembler.ownerIDToDomain(inputAccountDTO)
+...
 end
+
+ref over service
+Account Factory 1
+
+account = accountFactory.getAccount(ownerID, initialMovement, designation, accountType)
+end
+
 
 service -> repository : add(account)
 activate repository
@@ -228,33 +238,36 @@ return responseEntity
 autonumber
 title InputAccountDTO to Account
 
+participant ": ICreateAccountService" as service
 participant ": AccountDTODomainAssembler" as assembler
 participant ": OwnerID" as owner
-participant ": Balance" as balance
+participant ": Movement" as movement
 participant ": Designation" as designation
-participant ": AccountType" as type
 
--> assembler : toDomain(inputAccountDTO)
+activate service
+service -> assembler : ownerIDToDomain(inputAccountDTO)
 activate assembler
 
 assembler -> owner ** : create(inputAccountDTO.unpackOwnerID())
+return ownerID
 
-assembler -> balance ** : create(inputAccountDTO.unpackBalance())
+service -> assembler : movementToDomain(inputAccountDTO)
+activate assembler 
+
+assembler -> movement ** : create(inputAccountDTO.unpackMovement())
+return movement
+
+service -> assembler : designationToDomain(inputAccountDTO)
+activate assembler
 
 assembler -> designation ** : create(inputAccountDTO.unpackDesignation())
+return designation
 
-assembler -> type : valueOf(inputAccountDTO.unpackAccountType())
-activate type
+service -> assembler : accountTypeToDomain(inputAccountDTO)
+activate assembler
+assembler -> assembler : accountType = inputAccountDTO.unpackAccountType();
+
 return accountType
-
-ref over assembler
-Account Factory 1.
-
-account = accountFactory.getAccout(ownerID, balance, designation, accountType)
-end
-
-return account
-
 ```
 
 ```puml
