Added verification to Family Account Existence. Added test coverage to AccountRESTController

--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -370,6 +370,23 @@ return account
 
 ```
 
+```puml
+autonumber
+title Validating Existence of Family Account
+
+participant ":CreateAccountService" as service
+participant ":AccountRepository" as repo
+participant ":AccountRepositoryJPA" as repojpa
+participant ":Account" as account
+
+service -> repo : createAccount(InputAccountDTO)
+repo -> repo : verifyOwnerIDType
+alt verifyOwnerIDType == FamilyID
+repo -> repoJPA : verifyAccountIDExistence(ownerID)
+repoJPA -> repoJPA : for each Account
+else verifyOwnerIDType == PersonID
+end
+```
 
 ## 3.5 Tests
 
