fixing delete email function frontend

--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -303,6 +303,43 @@ return account
 
 ```
 
+##### FACTORY 1 with APPLICATION PROPERTIES
+
+```puml
+autonumber
+title Account Factory 1.
+
+participant ": AccountFactory" as factory
+participant "cashAccount : Account" as cashAccount
+participant "bankAccount : Account" as bankAccount
+participant "bankSavingsAccount : Account" as bankSavingsAccount
+participant "creditCardAccount : Account" as creditCardAccount
+
+-> factory : getAccount(ownerID, balance, designation, accountType)
+activate factory
+
+alt if(accountType = "CASH_ACCOUNT")
+factory -> cashAccount ** : create(ownerID, balance, designation)
+
+else if(accountType = "BANK_ACCOUNT")
+factory -> bankAccount ** : create(ownerID, balance, designation)
+
+else if(accountType = "BANK_SAVINGS_ACCOUNT")
+factory -> bankSavingsAccount ** : create(ownerID, balance, designation)
+
+else if(accountType = "CREDIT_CARD_ACCOUNT")
+factory -> creditCardAccount ** : create(ownerID, balance, designation)
+
+end
+
+return account
+
+
+
+```
+
+
+
 ```puml
 autonumber
 title AccountJPA to Account
