--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -303,6 +303,8 @@ return account
 
 ```
 
+newIAccount = (IAccount) Class.forName(classpath).newInstance();
+
 ##### FACTORY 1 with APPLICATION PROPERTIES
 
 ```puml
@@ -310,31 +312,23 @@ autonumber
 title Account Factory 1.
 
 participant ": AccountFactory" as factory
-participant "cashAccount : Account" as cashAccount
-participant "bankAccount : Account" as bankAccount
-participant "bankSavingsAccount : Account" as bankSavingsAccount
-participant "creditCardAccount : Account" as creditCardAccount
+participant "IAccount : anAccount" as anAccount
+
 
 -> factory : getAccount(ownerID, balance, designation, accountType)
 activate factory
 
-alt if(accountType = "CASH_ACCOUNT")
-factory -> cashAccount ** : create(ownerID, balance, designation)
+factory -> factory : classpath = environment.getProperty(accountType.toLowerCase())
 
-else if(accountType = "BANK_ACCOUNT")
-factory -> bankAccount ** : create(ownerID, balance, designation)
+factory -> anAccount ** : Class.forName(classpath).newInstance()
 
-else if(accountType = "BANK_SAVINGS_ACCOUNT")
-factory -> bankSavingsAccount ** : create(ownerID, balance, designation)
-
-else if(accountType = "CREDIT_CARD_ACCOUNT")
-factory -> creditCardAccount ** : create(ownerID, balance, designation)
-
-end
+factory -> anAccount : setDesignation(designation)
+activate anAccount
+factory -> anAccount : addMovement(movement);
+factory -> anAccount : setOwner(ownerID);
+deactivate anAccount
 
 return account
-
-
 
 ```
 
@@ -406,6 +400,35 @@ end
 return account
 
 ```
+
+##### FACTORY 2 with APPLICATION PROPERTIES
+
+```puml
+autonumber
+title Account Factory 2.
+
+participant ": AccountFactory" as factory
+participant "IAccount : anAccount" as anAccount
+
+-> factory : getAccount(ownerID, balance, designation, accountType, accountID)
+activate factory
+
+factory -> factory : classpath = environment.getProperty(accountType.toLowerCase())
+
+factory -> anAccount ** : Class.forName(classpath).newInstance()
+
+factory -> anAccount : setDesignation(designation)
+activate anAccount
+factory -> anAccount : addMovement(movement)
+factory -> anAccount : setOwner(ownerID)
+factory -> anAccount : setAccountID(accountID)
+deactivate anAccount
+
+return account
+
+
+```
+
 
 ```puml
 autonumber
